[package]
name = "chrono_vault"
version = "0.1.0"
description = "ChronoVault - Time-locked capsule program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chrono_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
